tests/invalids/invalidIf1.gt
proc main () 
    int m;
begin 
    if m > 0 
        m := n;
    fi
end
